<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/title_device_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:padding="8dp"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_toStartOf="@+id/progress_device_list"
            android:layout_toLeftOf="@+id/progress_device_list"/>
        <ProgressBar
            android:id="@+id/progress_device_list"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:visibility="invisible"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/title_device_list"/>
    </RelativeLayout>

    <TextView android:id="@+id/paired_title_device_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paired_devices"
        android:visibility="visible"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:paddingLeft="12dp"
        android:paddingStart="12dp"
        android:paddingRight="12dp"
        android:paddingEnd="12dp" />

    <ListView android:id="@+id/paired_devices_device_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stackFromBottom="true"
        android:layout_weight="1" />

    <TextView android:id="@+id/new_title_device_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_devices"
        android:visibility="gone"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:paddingLeft="12dp"
        android:paddingStart="12dp"
        android:paddingRight="12dp"
        android:paddingEnd="12dp" />

    <ListView android:id="@+id/new_devices_device_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stackFromBottom="true"
        android:layout_weight="2" />

    <Button android:id="@+id/scan_device_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:text="@string/scan" />

</LinearLayout>